# PsychLabs

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
backend/: temp.py
frontend/: app.py
